fixed paragraph alignment on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,3 +29,7 @@
     white-space: pre-wrap;
     text-align: left;
 }
+
+p  {
+   white-space: nowrap; 
+}
